--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,74 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,800;0,900;1,200;1,400;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
 
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Nuniito', sans-serif;
+	font-family: "Source Sans Pro", sans-serif;
+}
+
+main {
+	display: flex;
+	align-items: stretch;
+	justify-content: center;
+	flex-direction: column;
+}
+
+#navbar {
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-end;
+	background: #004d00;
+	padding: 2em 0;
+}
+
+#navbar a {
+	color: #fff;
+	text-decoration: none;
+	padding: 0px 12px;
+	font-size: 22px;
+}
+
+.nav-list {
+	padding-right: 2em;
+}
+
+#navbar a:hover {
+	color: #ffd11a;
+}
+
+#welcome-section {
+	margin: auto;
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #1e1e1e;
+	color: #ffd11a;
+}
+
+#welcome-section > h1 {
+	font-weight: 800;
+	font-size: 58px;
+	text-align: center;
+	width: 60%;
+}
+
+#projects {
+	background: #ddd;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+#projects h2 {
+	font-weight: 700;
+	font-size: 42px;
+	margin-top: 2.2em;
+}
+
+#projects .grid {
+	width: 100%;
+	display: grid;
 }
